; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_rsa_fips186_4.c_bn_rsa_fips186_4_aux_prime_min_size.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_rsa_fips186_4.c_bn_rsa_fips186_4_aux_prime_min_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bn_rsa_fips186_4_aux_prime_min_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bn_rsa_fips186_4_aux_prime_min_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sge i32 %4, 3072
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 171, i32* %2, align 4
  br label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp eq i32 %8, 2048
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 141, i32* %2, align 4
  br label %12

11:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %10, %6
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
